fix: added GPL-3.0 to json package

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "iara",
-  "version": "0.0.0",
+  "version": "0.1.2",
   "private": true,
+	"license": "GPL-3.0",
+	"author":"Esmerlin Paniagua",
   "scripts": {
     "start": "node ./bin/www",
     "prepare": "husky install"
